minikube/delta-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: database

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: delta-database
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      volumes:
      - name: database-storage
        persistentVolumeClaim:
          claimName: database-pvc
      containers:
      - name: delta-database
        image: "delta-database:latest"
        imagePullPolicy: Never
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: database-storage
        ports:
        - containerPort: 3306
