minikube/delta-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: delta-node
spec:
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
  selector:
    app: node

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: delta-node
  labels:
    app: node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: delta-node
        image: delta-node:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8888
