minikube/delta-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /packages
  name: delta-ingress
spec:
  rules:
  - host: minikube-dns
    http:
      paths:
      - path: /packages
        backend:
          serviceName: delta-node
          servicePort: 8888
